--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="contact__widget__item__text">
-                            <h4>Hotline</h4>
+                            <h4>WhatsApp</h4>
                             <p>+92 348-8285499 • +92 3061671373</p>
                         </div>
                     </div>
